添加页面增添浏览留言入口

--- a/add.html
+++ b/add.html
@@ -8,6 +8,7 @@
    
 </head>
 <body>
+    <b> <a href="list.php">浏览留言</a> </b>
     <form name="myform" action="add.php" method="POST" onsubmit="return CheckPost();">
         用户名:<input type="text" size="10" name="user"/><br>
         标题:<input type="text" size="10" name="title" /><br>
